🐛 Fixed whitespace between group name and period text
fixes STA-1176

--- a/frontend/shared/scss/base/text-styles.scss
+++ b/frontend/shared/scss/base/text-styles.scss
@@ -195,13 +195,29 @@
 
     font-size: 28px;
     font-weight: $font-weight-semibold;
-    line-height: 1.4;
+    line-height: 1.25;
 
     @media (max-width: 350px) {
         font-size: 26px;
     }
 
     padding-bottom: 10px;
+
+    &.with-block-icon-and-description {
+        display: flex;
+        align-items: center;
+        gap: 13px;
+        padding-bottom: 15px;
+
+        > div:last-child {
+            > div:first-child {
+                padding-bottom: 3px;
+                .title-suffix {
+                    margin-left: 5px;
+                }
+            }
+        }
+    }
 
     &.with-icons, &:has(.icon) {
         display: flex;
@@ -422,6 +438,7 @@
     //text-transform: uppercase;
     font-weight: $font-weight-bold;
     color: $color-primary;
+    cursor: default;
 
     @media (prefers-color-scheme: dark) {
         color: $color-primary-dark;
